--- a/public/style.css
+++ b/public/style.css
@@ -11,15 +11,17 @@ body {
     width: 50%;
     position: relative;
     height: 50px;
-    background-color: blue;
+    overflow: hidden;
 }
 
 .form input {
     width: 100%;
     height: 100%;
     color: #595f6e;
-    padding-top: 20px;
+    padding-top: 10px;
+    font-size: 16px;
     border: none;
+    outline: none;
 }
 
 .form label {
@@ -28,4 +30,39 @@ body {
     left: 0%;
     width: 100%;
     height: 100%;
+    pointer-events: none;
+    border-bottom: 1px solid black;
+}
+
+.form label::after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    height: 100%;
+    width: 100%;
+    border-bottom: 3px solid #5fa8d3;
+    transform: translate(-100%);
+    transition: transform 0.3s ease;
+}
+
+.content-username {
+    position: absolute;
+    font-size: 28px;
+    bottom: 5px;
+    left: 0px;
+    transition: all 0.3s ease;
+}
+
+.form input:focus + .label-username .content-username, 
+.form input:valid + .label-username .content-username {
+    transform: translateY(-110%);
+    font-size: 18px;
+    color: #5fa8d3;
+}
+
+
+.form input:focus + .label-username::after,
+.form input:valid + .label-username::after {
+    transform: translateX(0%);
 }
