--- a/public/style.css
+++ b/public/style.css
@@ -1,87 +1,90 @@
 body {
-    height: 60vh;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    flex-direction: column;
-    font-family: sans-serif;
+  height: 60vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  font-family: sans-serif;
 }
 
 .form {
-    position: relative;
-    width: 50%;
-    height: 200px;
+  position: relative;
+  width: 50%;
+  height: 200px;
 }
 
 .username {
-    position: absolute;
-    top: 0%;
-    width: 100%;
-    height: 50px;
-    overflow: hidden;
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 50px;
+  overflow: hidden;
 }
 
 .password {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 50px;
-    overflow: hidden;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 50px;
+  overflow: hidden;
 }
 
-.username input, .password input {
-    width: 100%;
-    height: 100%;
-    color: #595f6e;
-    padding-top: 10px;
-    font-size: 16px;
-    border: none;
-    outline: none;
+.username input,
+.password input {
+  width: 100%;
+  height: 100%;
+  color: #595f6e;
+  padding-top: 10px;
+  font-size: 16px;
+  border: none;
+  outline: none;
 }
 
-.username label, .password label {
-    position: absolute;
-    bottom: 0px;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    border-bottom: 1px solid black;
+.username label,
+.password label {
+  position: absolute;
+  bottom: 0px;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid black;
 }
 
-.username label::after, .password label:after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: -1px;
-    height: 100%;
-    width: 100%;
-    border-bottom: 3px solid #5fa8d3;
-    transform: translate(-100%);
-    transition: transform 0.3s ease;
+.username label::after,
+.password label:after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: -1px;
+  height: 100%;
+  width: 100%;
+  border-bottom: 3px solid #5fa8d3;
+  transform: translate(-100%);
+  transition: transform 0.3s ease;
 }
 
-.content-username, .content-password {
-    position: absolute;
-    font-size: 28px;
-    bottom: 5px;
-    left: 0px;
-    transition: all 0.3s ease;
+.content-username,
+.content-password {
+  position: absolute;
+  font-size: 28px;
+  bottom: 5px;
+  left: 0px;
+  transition: all 0.3s ease;
 }
 
-.username input:focus + .label-username .content-username, 
+.username input:focus + .label-username .content-username,
 .username input:valid + .label-username .content-username,
-.password input:focus + .label-password .content-password, 
+.password input:focus + .label-password .content-password,
 .password input:valid + .label-password .content-password {
-    transform: translateY(-110%);
-    font-size: 18px;
-    color: #5fa8d3;
+  transform: translateY(-110%);
+  font-size: 18px;
+  color: #5fa8d3;
 }
-
 
 .username input:focus + .label-username::after,
 .username input:valid + .label-username::after,
 .password input:focus + .label-password::after,
 .password input:valid + .label-password::after {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
