--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
 body {
-  height: 60vh;
+  height: 80vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -7,65 +15,98 @@ body {
   font-family: sans-serif;
 }
 
-.form {
+.login-box {
   position: relative;
-  width: 50%;
-  height: 200px;
+  width: 360px;
+  height: 500px;
+  margin-top: 120px;
+  background: #5fa8d3;
+  border-radius: 10px;
 }
 
-.username {
-  position: absolute;
-  top: 0%;
-  width: 100%;
+.login-box h1 {
+  position: relative;
+  font-size: 40px;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 10px 0px;
+}
+
+.logbtn {
+  position: relative;
+  left: 10%;
+  top: 40px;
+  width: 80%;
   height: 50px;
+  align-self: center;
+  background: linear-gradient(90deg, lightgray 50%, black 50%);
+  background-size: 200%;
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 20px;
+  padding: 5px;
+  cursor: pointer;
+  margin-top: 13px;
+  margin-bottom: 40px;
+  transition: transform 0.3s ease;
+}
+
+.logbtn:hover {
+  background-position: right;
+}
+
+.bottom-text {
+  position: relative;
+  margin-top:40px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.textbox {
+  position: relative;
+  left: 10%;
+  width: 80%;
+  height: 50px;
+  margin-bottom: 10px;
   overflow: hidden;
 }
 
-.password {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  height: 50px;
-  overflow: hidden;
-}
-
-.username input,
-.password input {
+.textbox input {
   width: 100%;
   height: 100%;
   color: #595f6e;
+  background: none;
   padding-top: 10px;
-  font-size: 16px;
+  font-size: 13px;
   border: none;
   outline: none;
 }
 
-.username label,
-.password label {
+.textbox label {
   position: absolute;
   bottom: 0px;
-  left: 0%;
+  left: 0px;
   width: 100%;
   height: 100%;
   pointer-events: none;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
 }
 
-.username label::after,
-.password label:after {
+.textbox label::after {
   content: "";
   position: absolute;
   left: 0px;
-  bottom: -1px;
+  bottom: -2px;
   height: 100%;
   width: 100%;
-  border-bottom: 3px solid #5fa8d3;
+  border-bottom: 3px solid white;
   transform: translate(-100%);
   transition: transform 0.3s ease;
 }
 
-.content-username,
-.content-password {
+.content-textbox {
   position: absolute;
   font-size: 28px;
   bottom: 5px;
@@ -73,18 +114,14 @@ body {
   transition: all 0.3s ease;
 }
 
-.username input:focus + .label-username .content-username,
-.username input:valid + .label-username .content-username,
-.password input:focus + .label-password .content-password,
-.password input:valid + .label-password .content-password {
-  transform: translateY(-110%);
+.textbox input:focus + .label-textbox .content-textbox,
+.textbox input:valid + .label-textbox .content-textbox {
+  transform: translateY(-100%);
   font-size: 18px;
-  color: #5fa8d3;
+  color: white;
 }
 
-.username input:focus + .label-username::after,
-.username input:valid + .label-username::after,
-.password input:focus + .label-password::after,
-.password input:valid + .label-password::after {
+.textbox input:focus + .label-textbox::after,
+.textbox input:valid + .label-textbox::after {
   transform: translateX(0%);
 }
