--- a/public/style.css
+++ b/public/style.css
@@ -126,3 +126,81 @@ body {
   font-size: 15px;
 }
 
+.signup-btn {
+  background: linear-gradient(90deg, lightgray 50%, black 50%);
+  background-size: 200%;
+  border: 2px solid white;
+  border-radius: 20px;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 2px;
+  transition: transform 0.3s ease;
+}
+
+.signup-btn:hover {
+  background-position: right;
+}
+
+.bg-modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  display: none;
+}
+
+.modal-content {
+  position: relative;
+  width: 500px;
+  height: 420px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 20px;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  font-size: 40px;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+.modal-content h1 {
+  margin-top: 30px;
+  margin-bottom: 45px;
+}
+
+.info-box {
+  width: 60%;
+  height: 30px;
+  display: block;
+  margin: 20px auto;
+}
+.register-btn {
+  width: 30%;
+  height: 40px;
+  margin-top: 25px;
+  background: linear-gradient(90deg, lightgray 50%, black 50%);
+  background-size: 200%;
+  border: 2px solid black;
+  border-radius: 20px;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 2px;
+  font-size: 17px;
+  transition: transform 0.3s ease;
+}
+
+.register-btn:hover {
+  background-position: right;
+}
