--- a/client/src/component/bars/Side.css
+++ b/client/src/component/bars/Side.css
@@ -69,7 +69,7 @@
   color: #fff;
 }
 
-.header-lg {
+.header {
   color: #4b646f;
   background: #1a2226;
   overflow: hidden;
@@ -77,18 +77,6 @@
   white-space: nowrap;
   padding: 10px 25px 10px 15px;
   font-size: 12px;
-  width: 230px;
-}
-
-.header-sm {
-  color: #4b646f;
-  background: #1a2226;
-  overflow: hidden;
-  text-overflow: clip;
-  white-space: nowrap;
-  padding: 10px 25px 10px 15px;
-  font-size: 12px;
-  width: 70px;
 }
 
 .header-text {
@@ -102,7 +90,7 @@
   background-color: teal;
 }
 
-.x {
+.mainmenu-home-sm {
   width: 70px;
   height: 44px;
   background-color: teal;
