--- a/client/src/component/bars/NavigationBar.css
+++ b/client/src/component/bars/NavigationBar.css
@@ -103,7 +103,7 @@
 
 .section-logout {
   color: #fff;
-  height: 100%;
+  height: 50px;
   background-color: transparent;
   background-image: none;
   text-align: center;
@@ -120,4 +120,12 @@
   margin-left: 5px;
   font-family: sans-serif;
   font-weight: 300;
+}
+
+.navmain li a {
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none;
+  height: 50px;
+  width: 100%;
 }
