--- a/client/src/component/box/Table.css
+++ b/client/src/component/box/Table.css
@@ -1,10 +1,8 @@
 .box {
   position: relative;
-  min-height: 10px;
+  min-height: 100px;
   margin-left: 15px;
   margin-right: 15px;
-  padding-right: 15px;
-  padding-left: 15px;
   border-radius: 3px;
   background: #fff;
   border-top: 3px solid #d2d6de;
@@ -15,6 +13,29 @@
 
 .user-box,
 .product-box {
-  height: 250px;
   width: calc(50% - 30px);
+}
+
+/* Box Header*/
+.box-header {
+  color: #444;
+  display: block;
+  padding: 10px;
+  position: relative;
+}
+
+.box-title {
+  display: inline-block;
+  font-size: 18px;
+  margin: 0;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.box-body {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding: 10px;
 }
