--- a/client/src/component/box/Table.css
+++ b/client/src/component/box/Table.css
@@ -16,7 +16,24 @@
   width: calc(50% - 30px);
 }
 
-.fa-sort {
+.btn-filter {
+  color: #fff;
+  height: 40px;
+  width: 40px;
+  background: transparent;
+  background-image: none;
+  text-decoration: none;
+  vertical-align: middle;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.btn-filter:hover {
+  background: rgba(255, 255, 255, 0.4);
 }
 
 /* Box Header*/
@@ -46,8 +63,8 @@
 /*  Table CSS */
 .box-body table {
   border-collapse: collapse;
-  font-size: 0.9em;
-  min-width: 434px;
+  font-size: 16px;
+  width: 100%;
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -62,7 +79,7 @@
 
 .box-body th,
 .box-body td {
-  padding: 12px 15px;
+  padding: 12px 25px;
   height: 44px;
 }
 
@@ -74,11 +91,47 @@
   background-color: #f3f3f3;
 }
 
-.box-body tbody tr:last-of-type {
+/* .box-body tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+} */
+
+.box-body tbody tr:hover {
   border-bottom: 2px solid #009879;
 }
 
 .box-body tbody tr.active-row {
   font-weight: bold;
   color: #009879;
+}
+
+.pagination {
+  float: right;
+  font-size: 14px;
+  color: #666;
+  margin: 15px 5px;
+}
+
+.pagination button {
+  color: #666;
+  height: 50px;
+  width: 50px;
+  background: transparent;
+  background-image: none;
+  text-decoration: none;
+  vertical-align: middle;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.pagination button:hover {
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.pagination span {
+  padding-top: 5px;
+  margin: 0 10px;
 }
