--- a/client/src/component/bars/NavigationBar.css
+++ b/client/src/component/bars/NavigationBar.css
@@ -8,15 +8,15 @@
 .navmain {
   position: relative;
   margin: 0 auto;
-  height: 50px;
+  height: 60px;
   width: 100%;
   display: block;
-  background-color: #3c8dbc;
+  background-color: #111111;
   z-index: 2;
 }
 
 .logo {
-  background-color: #367fa9;
+  background-color: black;
   color: #fff;
   border-bottom: 0 solid transparent;
   transition: width 0.3s ease-in-out;
@@ -24,7 +24,7 @@
   float: left;
   height: 100%;
   font-size: 20px;
-  line-height: 50px;
+  line-height: 60px;
   text-align: center;
   padding: 0 10px;
   font-weight: 300;
@@ -45,14 +45,14 @@
   background-color: transparent;
   background-image: none;
   text-align: center;
-  padding: 14px 20px;
+  padding: 20px 20px;
   font-family: fontAwesome;
-  height: 100%;
+  height: 60px;
   font-size: 16px;
 }
 
 .sidebar-toggle:hover {
-  background-color: #367fa9;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 [role="button"] {
@@ -81,7 +81,7 @@
 }
 
 .section-user:hover {
-  background-color: #367fa9;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .user-image {
@@ -96,24 +96,24 @@
 
 .user-info {
   color: #fff;
-  line-height: 50px;
+  line-height: 60px;
   font-weight: 300;
   font-size: 14px;
 }
 
 .section-logout {
   color: #fff;
-  height: 50px;
+  height: 60px;
   background-color: transparent;
   background-image: none;
   text-align: center;
-  padding: 14px 14px;
+  padding: 20px 15px;
   font-family: fontAwesome;
   font-size: 14px;
 }
 
 .section-logout:hover {
-  background-color: #367fa9;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .logout {
@@ -126,6 +126,6 @@
   color: #fff;
   cursor: pointer;
   text-decoration: none;
-  height: 50px;
+  height: 60px;
   width: 100%;
 }
