--- a/client/src/component/box/Table.css
+++ b/client/src/component/box/Table.css
@@ -19,6 +19,11 @@
   border-top: 3px solid #f39c12;
 }
 
+.opFloor-box {
+  width: calc(100% - 30px);
+  border-top: 3px solid #3c8dbc;
+}
+
 .btn-filter {
   color: #fff;
   height: 40px;
@@ -45,6 +50,7 @@
   display: block;
   padding: 10px;
   position: relative;
+  border-bottom: 1px solid #f4f4f4;
 }
 
 .box-title {
@@ -122,7 +128,7 @@
 .tools {
   float: left;
   font-size: 14px;
-  margin: 10px 5px;
+  margin: 5px 5px;
 }
 
 .tools-btn {
@@ -158,7 +164,7 @@
   float: right;
   font-size: 14px;
   color: #666;
-  margin: 10px 5px;
+  margin: 5px 5px;
 }
 
 .pagination button {
