--- a/client/src/component/box/Table.css
+++ b/client/src/component/box/Table.css
@@ -189,9 +189,18 @@
   border-bottom: 2px solid #f39c12;
 }
 
+.opFloor-box .box-body tbody tr:hover {
+  border-bottom: 2px solid #3c8dbc;
+}
+
 .user-box .active-row {
   font-weight: bold;
   color: #009879;
+}
+
+.opFloor-box .active-row {
+  font-weight: bold;
+  color: #3c8dbc;
 }
 
 /* Tools */
