--- a/website/src/component/box/Table.css
+++ b/website/src/component/box/Table.css
@@ -1,5 +1,6 @@
 .box {
   position: relative;
+  width: calc(50% - 30px);
   min-height: 100px;
   margin-left: 15px;
   margin-right: 15px;
@@ -7,8 +8,6 @@
   border-radius: 3px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  float: left;
-  width: calc(50% - 30px);
 }
 
 .user-box {
@@ -27,15 +26,11 @@
 
 .btn-filter {
   color: #fff;
-  height: 40px;
-  width: 40px;
+  height: 30px;
+  width: 30px;
   background: transparent;
-  background-image: none;
-  text-decoration: none;
-  vertical-align: middle;
   border: none;
   border-radius: 50%;
-  outline: none;
   display: inline-block;
   cursor: pointer;
   font-size: 18px;
@@ -64,11 +59,7 @@
 
 .box-body {
   position: relative;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
-  min-height: 100px;
+  border-radius: 0 0 3px 3px;
   padding: 10px;
 }
 
@@ -182,15 +173,15 @@
 } */
 
 .user-box .box-body tbody tr:hover {
-  border-bottom: 2px solid #009879;
+  border-bottom: 1px solid #009879;
 }
 
 .product-box .box-body tbody tr:hover {
-  border-bottom: 2px solid #f39c12;
+  border-bottom: 1px solid #f39c12;
 }
 
 .opFloor-box .box-body tbody tr:hover {
-  border-bottom: 2px solid #3c8dbc;
+  border-bottom: 1px solid #3c8dbc;
 }
 
 .user-box .active-row {
