--- a/website/src/pages/UserPage/components/lst/Lst.sass
+++ b/website/src/pages/UserPage/components/lst/Lst.sass
@@ -1,7 +1,10 @@
 .traplst
     width: 100%
     height: 100%
-    background-color: #666
+    border-radius: 3px;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
+    border-top: 3px solid #3c8dbc;
     display: flex
     flex-direction: column
     .traplst-title
@@ -14,17 +17,17 @@
         height: calc( 100% - 60px )
         display: flex
         flex-direction: column
-        margin-bottom: 30px
+        padding: 15px
         overflow-y: auto
         .trap
             width: 100%
             height: 40px
-            border: #000 solid 4px
-            margin-bottom: 5px
+            background-color: #ebebeb
+            margin-bottom: 10px
             text-align: center
-            line-height: 32px
+            line-height: 40px
             &:hover
-                background-color: #ebebeb
+                background-color: #6a9dbb
             &:active
-                background-color: #4b4b4b
+                background-color: #3c8dbc
 
