--- a/website/src/component/bars/SideBar.css
+++ b/website/src/component/bars/SideBar.css
@@ -1,43 +1,43 @@
 .sidemain {
   height: 100%;
-  width: 230px;
+  width: 14.5rem;
   background-color: #2e393f;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 
 /* User Panel */
 .user-panel {
   width: 100%;
-  height: 70px;
+  height: 4.5rem;
   background-color: #222d32;
   position: relative;
-  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   color: #fff;
 }
 
 .user-image-side {
-  float: left;
   width: 100%;
-  max-width: 50px;
+  max-width: 3rem;
   height: 100%;
-  max-height: 50px;
+  max-height: 3rem;
   width: 100%;
   height: 100%;
+  margin-left: 0.7rem;
   border: 0;
   border-radius: 50%;
 }
 
 .user-panel-info {
-  float: left;
-  padding: 5px 5px 5px 15px;
-  line-height: 1;
+  margin-left: 1rem;
 }
 
 .user-panel-info-online {
   text-decoration: none;
-  padding-right: 5px;
-  margin-top: 10px;
-  font-size: 11px;
+  padding-right: 0.5rem;
+  margin-top: 0.5rem;
+  font-size: 0.6rem;
   color: #3c763d;
 }
 
@@ -46,21 +46,10 @@
 }
 
 /* Main Menu */
-.mainmenu {
-  white-space: nowrap;
-  overflow: hidden;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: block;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
 .mainmenu li a {
   width: 100%;
-  height: 44px;
-  padding: 12px 5px 12px 15px;
+  height: 100%;
+  padding: 0.8rem 0.5rem 0.8rem 1rem;
   display: block;
   color: #b8c7ce;
 }
@@ -73,45 +62,36 @@
 .header {
   color: #4b646f;
   background: #1a2226;
-  overflow: hidden;
-  text-overflow: clip;
-  white-space: nowrap;
-  padding: 10px 25px 10px 15px;
-  font-size: 12px;
-}
-
-.header-text {
-  background: transparent;
-  height: 36px;
+  padding: 0.6rem 1rem;
+  font-size: 0.75rem;
 }
 
 .mainmenu-sub-lg {
-  width: 230px;
-  height: 44px;
+  width: 100%;
+  height: 2.8rem;
 }
 
 .mainmenu-sub-sm {
   width: 70px;
-  height: 44px;
+  height: 2.8rem;
 }
 
 .mainmenu-fa {
   float: left;
-  font: normal normal normal 14px/1 FontAwesome;
   text-rendering: auto;
-  height: 14px;
-  width: 14px;
-  margin-left: 11px;
+  height: 0.9rem;
+  width: 0.9rem;
+  margin-left: 0.6rem;
   text-align: center;
-  margin-top: 2.5px;
+  margin-top: 0.1rem;
 }
 
 .mainmenu-middle {
   float: left;
-  margin-left: 20px;
+  margin-left: 1.2rem;
 }
 .mainmenu-right {
   float: right;
-  margin-right: 10px;
+  margin-right: 1rem;
   top: 50%;
 }
