--- a/website/src/pages/UserPage/UserPage.sass
+++ b/website/src/pages/UserPage/UserPage.sass
@@ -2,9 +2,9 @@
     display: flex
     flex-direction: column
     .navbar
-        height: 60px
+        height: 3.5rem
     .main
-        height: calc( 100vh - 60px )
+        height: calc( 100vh - 3.5rem )
         display: flex
         flex-direction: row
 
