--- a/website/src/pages/AdminPage/components/box/Table.css
+++ b/website/src/pages/AdminPage/components/box/Table.css
@@ -26,14 +26,14 @@
 
 .btn-filter {
   color: #fff;
-  height: 30px;
-  width: 30px;
+  height: 2rem;
+  width: 2rem;
   background: transparent;
   border: none;
   border-radius: 50%;
   display: inline-block;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .btn-filter:hover {
@@ -44,14 +44,14 @@
 .box-header {
   color: #444;
   display: block;
-  padding: 10px;
+  padding: 0.7rem;
   position: relative;
   border-bottom: 1px solid #f1f1f1;
 }
 
 .box-title {
   display: inline-block;
-  font-size: 18px;
+  font-size: 1.2rem;
   margin: 0;
   line-height: 1;
   font-weight: 400;
@@ -197,7 +197,7 @@
 /* Tools */
 .tools {
   float: left;
-  font-size: 14px;
+  font-size: 1rem;
   margin: 5px 5px;
 }
 
@@ -246,7 +246,7 @@
 
 .tool-form input {
   height: 26.25px;
-  font-size: 14px;
+  font-size: 1rem;
   border: 1px solid #bbbbbb;
   outline: none;
   padding-left: 7px;
@@ -257,15 +257,15 @@
 /* Pagination */
 .pagination {
   float: right;
-  font-size: 14px;
+  font-size: 1rem;
   color: #666;
-  margin: 5px 5px;
+  margin: 0.3rem;
 }
 
 .pagination button {
   color: #666;
-  height: 50px;
-  width: 50px;
+  height: 3.2rem;
+  width: 3.2rem;
   background: transparent;
   background-image: none;
   text-decoration: none;
@@ -289,11 +289,11 @@
 
 /* Status */
 .status-asg {
-  font-size: 14px;
+  font-size: 1rem;
   color: green;
 }
 
 .status-unasg {
-  font-size: 14px;
+  font-size: 1rem;
   color: red;
 }
