--- a/website/src/pages/UserPage/components/content/Content.sass
+++ b/website/src/pages/UserPage/components/content/Content.sass
@@ -7,11 +7,11 @@
     overflow: hidden
     .user-content-header
         width: 100%
-        padding: 15px 15px 0 15px
+        padding: 1rem 1rem 0 1rem
         color: #777
         display: flex
         flex-direction: row
-        font-size: 14px
+        font-size: 0.8rem
     .user-content-main
         width: 100%
         flex-grow: 1
@@ -20,8 +20,8 @@
         .lst
             width: 20%
             height: 100%
-            padding: 15px 0
-            padding-left: 15px
+            padding: 1rem 0
+            padding-left: 1rem
             position: relative
         .info
             width: 80%
@@ -31,11 +31,11 @@
             .trap
                 height: 50%
                 width: 100%
-                padding: 15px;
+                padding: 1rem;
             .plot
                 height: 50%
                 width: 100%
-                padding: 15px;
+                padding: 1rem;
 
 
 
