--- a/website/src/pages/UserPage/components/infoBox/infoBox.sass
+++ b/website/src/pages/UserPage/components/infoBox/infoBox.sass
@@ -13,15 +13,15 @@
         display: flex
         flex-direction: row
         align-items: flex-start
-        padding: 10px 0
+        padding: 0.6rem 0
         overflow: hidden
         .infoBox-img
             width: 50%
             height: 100%
             position: relative
             .infoBox-pic
-                width: 200px
-                height: 200px
+                width: 13rem
+                height: 13rem
                 position: absolute
                 top: 50%
                 left: 50%
@@ -34,24 +34,24 @@
             display: flex
             flex-direction: column
             justify-content: space-between
-            padding: 15px 0
+            padding: 1rem 0
             .infoBox-row
-                height: 35px
-                width: 400px
+                height: 2.3rem
+                width: 27rem
                 background-color: #dbdbdb
                 display: flex
                 flex-direction: row
                 align-items: center
                 border-radius: 6px
                 text-align: center
-                line-height: 35px
+                line-height: 2.3rem
                 overflow: hidden
                 .row-title
                     height: 100%
-                    width: 150px
+                    width: 10rem
                     background-color: #009879
                     color: #fff
-                    margin-right: 15px
+                    margin-right: 1rem
                 .row-content
 
     .pagination 
