--- a/website/src/pages/UserPage/components/lst/Lst.sass
+++ b/website/src/pages/UserPage/components/lst/Lst.sass
@@ -14,18 +14,18 @@
         line-height: 50px
     .traplst-main
         width: 100%
-        height: calc( 100% - 60px )
+        height: calc( 100% - 1.8rem )
         display: flex
         flex-direction: column
-        padding: 15px
+        padding: 1rem
         overflow-y: auto
         .trap
             width: 100%
-            height: 40px
+            height: 2.5rem
             background-color: #ebebeb
-            margin-bottom: 10px
+            margin-bottom: 0.5rem
             text-align: center
-            line-height: 40px
+            line-height: 2.5rem
             &:hover
                 background-color: #6a9dbb
             &:active
