--- a/website/src/pages/UserPage/components/infoBox/infoBox.sass
+++ b/website/src/pages/UserPage/components/infoBox/infoBox.sass
@@ -20,8 +20,8 @@
             height: 100%
             position: relative
             .infoBox-pic
-                width: 13rem
-                height: 13rem
+                width: 12vw
+                height: 12vw
                 position: absolute
                 top: 50%
                 left: 50%
@@ -36,19 +36,19 @@
             justify-content: space-between
             padding: 1rem 0
             .infoBox-row
-                height: 2.3rem
-                width: 27rem
+                height: 4vh
+                width: 25vw
                 background-color: #dbdbdb
                 display: flex
                 flex-direction: row
                 align-items: center
                 border-radius: 6px
                 text-align: center
-                line-height: 2.3rem
+                line-height: 4vh
                 overflow: hidden
                 .row-title
                     height: 100%
-                    width: 10rem
+                    width: 10vw
                     background-color: #009879
                     color: #fff
                     margin-right: 1rem
