--- a/website/src/pages/UserPage/components/infoBox/infoBox.sass
+++ b/website/src/pages/UserPage/components/infoBox/infoBox.sass
@@ -1,10 +1,10 @@
 .infoBox
-    width: 100%;
-    height: 100%;
-    border-radius: 3px;
-    background: #fff;
+    width: 100%
+    height: 100%
+    border-radius: 3px
+    background: #fff
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
-    border-top: 3px solid #009879;
+    border-top: 3px solid #009879
     display: flex
     flex-direction: column
     .infoBox-main
@@ -54,7 +54,7 @@
                     margin-right: 1rem
                 .row-content
 
-    .pagination 
+    .pagination
         display: flex
         flex-direction: row
         align-items: center
