--- a/website/src/pages/UserPage/components/lst/Lst.sass
+++ b/website/src/pages/UserPage/components/lst/Lst.sass
@@ -1,10 +1,10 @@
 .traplst
     width: 100%
     height: 100%
-    border-radius: 3px;
-    background: #fff;
+    border-radius: 3px
+    background: #fff
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
-    border-top: 3px solid #3c8dbc;
+    border-top: 3px solid #3c8dbc
     display: flex
     flex-direction: column
     .traplst-title
@@ -26,8 +26,8 @@
             margin-bottom: 0.5rem
             text-align: center
             line-height: 2.5rem
+            border-radius: 0.5rem
             &:hover
                 background-color: #6a9dbb
             &:active
                 background-color: #3c8dbc
-
