--- a/website/src/pages/UserPage/components/infoBox/infoBox.sass
+++ b/website/src/pages/UserPage/components/infoBox/infoBox.sass
@@ -16,7 +16,7 @@
         padding: 0.6rem 0
         overflow: hidden
         .infoBox-img
-            width: 50%
+            width: 40%
             height: 100%
             position: relative
             .infoBox-pic
@@ -29,15 +29,15 @@
                 border-radius: 50%
                 background-color: #009879
         .infoBox-data
-            width: 50%
+            width: 60%
             height: 100%
             display: flex
             flex-direction: column
             justify-content: space-between
-            padding: 1rem 0
+            padding-right: 2vw
             .infoBox-row
                 height: 4vh
-                width: 25vw
+                min-width: 25vw
                 background-color: #dbdbdb
                 display: flex
                 flex-direction: row
