--- a/website/src/pages/UserPage/components/content/Content.sass
+++ b/website/src/pages/UserPage/components/content/Content.sass
@@ -1,10 +1,10 @@
 .user-content-canvas
-    height: calc(100vh - 60px)
+    height: calc(100vh - 56px)
     background-color: #ecf0f5
     flex-grow: 1
     display: flex
     flex-direction: column
-    overflow: hidden
+    overflow-y: scroll
     .user-content-header
         width: 100%
         padding: 1rem 1rem 0 1rem
@@ -31,12 +31,8 @@
             .trap
                 height: 50%
                 width: 100%
-                padding: 1rem;
+                padding: 1rem
             .plot
                 height: 50%
                 width: 100%
-                padding: 1rem;
-
-
-
-
+                padding: 1rem
