--- a/website/src/component/bars/SideBar.css
+++ b/website/src/component/bars/SideBar.css
@@ -3,6 +3,8 @@
   width: 14.5rem;
   background-color: #2e393f;
   font-size: 0.9rem;
+  display: flex;
+  flex-direction: column;
 }
 
 /* User Panel */
@@ -18,12 +20,8 @@
 }
 
 .user-image-side {
-  width: 100%;
-  max-width: 3rem;
-  height: 100%;
-  max-height: 3rem;
-  width: 100%;
-  height: 100%;
+  width: 3rem;
+  height: 3rem;
   margin-left: 0.7rem;
   border: 0;
   border-radius: 50%;
@@ -46,34 +44,29 @@
 }
 
 /* Main Menu */
-.mainmenu li a {
-  width: 100%;
-  height: 100%;
-  padding: 0.8rem 0.5rem 0.8rem 1rem;
-  display: block;
-  color: #b8c7ce;
+.mainmenu {
+  display: flex;
+  flex-direction: column;
 }
 
-.mainmenu li a:hover {
-  background-color: #222d32;
-  color: #fff;
-}
-
-.header {
+.mainmenu-header {
   color: #4b646f;
   background: #1a2226;
   padding: 0.6rem 1rem;
   font-size: 0.75rem;
 }
 
-.mainmenu-sub-lg {
-  width: 100%;
+.mainmenu-row {
   height: 2.8rem;
+  width: 100%;
+  padding: 0.8rem 0.5rem 0.8rem 1rem;
+  display: block;
+  color: #b8c7ce;
 }
 
-.mainmenu-sub-sm {
-  width: 70px;
-  height: 2.8rem;
+.mainmenu-row:hover {
+  background-color: #222d32;
+  color: #fff;
 }
 
 .mainmenu-fa {
